# Simula-24

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  CREDITS.txt  Doxyfile  README.md
art/: Sprite-0002.aseprite  meduim-world-tile.aseprite
data/graphics/fallback/: object_graphics.conf
data/object/: object.conf
data/stations/: station01.map
data/tileset/cp437/: tileset.inf
docs/: GDD.docx  logging.md
docs/diagrams/save/: JobArchitecture.drawio  Layers.drawio  PERT.drawio  Texture Access.drawio  com.drawio  gameplay elements.drawio  loop.drawio  navserver.drawio  relational-database.drawio  s24engine.drawio  smcore.drawio  tile-mapping.drawio
scripts/: buildall.ps1  buildutils.psm1  cl-summary.sh  countlines.sh  prebuild.ps1  todofind.sh
simula24/: Application.cpp  Application.h  CMakeLists.txt
simula24/app/: Application.cpp  Application.h  CMakeLists.txt
simula24/app/object/: ObjectTable.cpp  ObjectTable.h
simula24/core/: CMakeLists.txt  types.h
simula24/core/error/: error.h  seh.h
simula24/core/io/: File.h
simula24/core/log/: colors.h  log.cpp  log.h
simula24/core/log/sink/: ConsoleSink.cpp  ConsoleSink.h  FileSink.cpp  FileSink.h
simula24/core/memory/: memory.cpp  memory.h
simula24/core/stl/: array.h  basic_string.h  copy_on_write.h  function.h  hash.h  iterator.h  max_heap.h  priority_queue.h  smart_ptr.h  string.h  unordered_map.h  utility.h  variant.h
simula24/core/system/: Clock.cpp  Clock.h  Scheduler.cpp  Scheduler.h
simula24/core/thread/: mutex.h  thread.h
simula24/game/: Application.cpp  Application.h  CMakeLists.txt
simula24/game/entity/: Civilian.h
simula24/game/map/: ObjectMap.h
simula24/game/object/: ObjectTable.h
simula24/game/tile/: CMakeLists.txt  TileConfig.cpp  TileConfig.h  TileSheet.cpp  TileSheet.h  TileSheetParser.cpp  TileSheetParser.h
simula24/graphics/: AppWindow.cpp  AppWindow.h  AppWindowMgr.cpp  AppWindowMgr.h  CMakeLists.txt  Graphics.cpp  Graphics.h  TextureManager.cpp  TextureManager.h  TileDatabase.h
simula24/graphics/renderer/: Camera.h  RenderManager.cpp  RenderManager.h
simula24/graphics/tile/: CMakeLists.txt  SheetLoader.cpp  SheetLoader.h  TileConfig.cpp  TileConfig.h  TileSheet.cpp  TileSheet.h  TileSheetDatabase.cpp  TileSheetDatabase.h  TileSheetParser.cpp  TileSheetParser.h  TileSize.h
simula24/main/: CMakeLists.txt  main.cpp
simula24/math/: CMakeLists.txt  Point.cpp  Point.h
simula24/objectmanager/: CMakeLists.txt  ObjectManager.cpp  ObjectManager.h  ObjectTable.cpp  ObjectTable.h
simula24/platform/: CMakeLists.txt
simula24/platform/unix/: CMakeLists.txt  File.cpp  seh.cpp  unixplatformtypes.h
simula24/platform/windows/: CMakeLists.txt  file.cpp  seh.cpp  win32platformtypes.h
simula24/platform/windows/thread/: mutex.cpp  thread.cpp
simula24/smcore/: CMakeLists.txt  Simulation.cpp  Simulation.h
simula24/smcore/entity/: Civilian.cpp  Civilian.h  CrewMember.cpp  CrewMember.h  EntityState.h
simula24/smcore/job/: CMakeLists.txt  Job.h  JobQueue.cpp  JobQueue.h  JobType.h
simula24/smcore/localsystem/: LocalCluster.cpp  LocalCluster.h
simula24/smcore/map/: NeighborMap.h  ObjectMap.cpp  ObjectMap.h
simula24/smcore/path/: AStar.cpp  AStar.h
simula24/smcore/station/: SpaceStation.cpp  SpaceStation.h
simula24/smcore/workstation/: WorkStation.h
simula24/ui/: CMakeLists.txt
simula24/ui/debug/console/: DbgConsole.cpp  DbgConsole.h
src/: CMakeLists.txt
src/main/: CMakeLists.txt  main.cpp
src/simula24/: CMakeLists.txt  types.h
src/simula24/core/: CMakeLists.txt
src/simula24/core/error/: error.h
src/simula24/core/io/: File.h
src/simula24/core/log/: log.cpp  log.h
src/simula24/core/log/sink/: BaseSink.h  ConsoleSink.cpp  ConsoleSink.h  FileSink.cpp  FileSink.h
src/simula24/core/memory/: memory.cpp
src/simula24/core/stl/: array.h  basic_string.h  copy_on_write.h  function.h  hash.h  iterator.h  smart_ptr.h  string.cpp  string.h  unordered_map.h  utility.h  variant.h
src/simula24/platform/windows/: CMakeLists.txt
tests/: CMakeLists.txt  test_main.cpp
tests/simula24/: simula24_tests.h
tests/simula24/template_tests/: array_tests.h  cow_tests.h  function_test.h  pq_test.h  str_test.h  unordered_map_test.h
